--- a/ansible/roles/cyclonedds/templates/cyclonedds.xml.jinja2
+++ b/ansible/roles/cyclonedds/templates/cyclonedds.xml.jinja2
@@ -2,14 +2,20 @@
 <CycloneDDS xmlns="https://cdds.io/config" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="https://cdds.io/config https://raw.githubusercontent.com/eclipse-cyclonedds/cyclonedds/master/etc/cyclonedds.xsd">
   <Domain id="any">
     <General>
-      <NetworkInterfaceAddress>{{ cyclonedds.network_interface_address|join(',') }}</NetworkInterfaceAddress>
+      <Interfaces>
+{% for key in network_config %}
+{% if 'ros' in key %}
+        <NetworkInterface address="{{ network_config[key].interface_address }}"/>
+{% endif %}
+{% endfor %}
+      </Interfaces>
       <AllowMulticast>spdp</AllowMulticast>
       <MaxMessageSize>65500B</MaxMessageSize>
       <FragmentSize>4000B</FragmentSize>
       <DontRoute>true</DontRoute>
     </General>
     <Internal>
-      <MinimumSocketReceiveBufferSize>{{ cyclonedds.minimum_socket_receive_buffer_size }}</MinimumSocketReceiveBufferSize>
+      <SocketReceiveBufferSize min="{{ cyclonedds.minimum_socket_receive_buffer_size }}" />
     </Internal>
   </Domain>
 </CycloneDDS>
