--- a/ansible/roles/enlarge_txqueue/templates/99-enlarge-txqueuelen.rules.jinja2
+++ b/ansible/roles/enlarge_txqueue/templates/99-enlarge-txqueuelen.rules.jinja2
@@ -1,3 +1,5 @@
 {% for key in network_config %}
+{% if 'dhcp' not in key %}
 SUBSYSTEM=="net",ACTION=="add|change",KERNEL=="{{ network_config[key].interface_name }}",ATTR{tx_queue_len}="{{ txqueue_length }}"
+{% endif %}
 {% endfor %}
