--- a/ansible/roles/cyclonedds/templates/cyclonedds.xml.jinja2
+++ b/ansible/roles/cyclonedds/templates/cyclonedds.xml.jinja2
@@ -15,7 +15,7 @@
       <DontRoute>true</DontRoute>
     </General>
     <Internal>
-      <SocketReceiveBufferSize min="{{ cyclonedds.minimum_socket_receive_buffer_size }}" />
+      <SocketReceiveBufferSize min="{{ cyclonedds_minimum_socket_receive_buffer_size }}" />
     </Internal>
   </Domain>
 </CycloneDDS>
