source setup bash
Signed-off-by: Kento Yabuuchi <kento.yabuuchi.2@tier4.jp>

--- a/ansible/roles/perception_application/templates/run.sh.xx1_gen2.j2
+++ b/ansible/roles/perception_application/templates/run.sh.xx1_gen2.j2
@@ -17,6 +17,7 @@ done
 source /opt/ros/humble/install/setup.bash
 source {{ autoware_env_dir }}/autoware.env
 source {{ autoware_env_dir }}/vehicle.env
+source {{ perception_application_base_path }}/{{ perception_application_directory_name }}/install/setup.bash
 
 {% if perception_type == 'tlr' %}
 ros2 launch edge_auto_jetson_launch jetson_tlr.launch.xml \
