fix: update camera driver installer

--- a/ansible/roles/tier4_hdr_camera_driver/templates/camera-driver-installer.sh.j2
+++ b/ansible/roles/tier4_hdr_camera_driver/templates/camera-driver-installer.sh.j2
@@ -1,6 +1,9 @@
 #!/bin/bash
 set -e
 
+apt-mark unhold tier4-camera-gmsl
+dpkg --configure tier4-camera-gmsl
+
 if ! grep -q "LABEL t4_primary_c2x8" /boot/extlinux/extlinux.conf; then
   cat >> /boot/extlinux/extlinux.conf << 'EOF'
 LABEL t4_primary_c2x8
@@ -14,6 +17,8 @@ EOF
 fi
 
 sed -i 's/^DEFAULT primary/DEFAULT t4_primary_c2x8/' /boot/extlinux/extlinux.conf
+
+sed -i 's/options tier4_imx490 trigger_mode=0 enable_auto_exposure=1 enable_distortion_correction=1/options tier4_imx490 trigger_mode=1 enable_auto_exposure=1 enable_distortion_correction=1 shutter_time_min=11000 shutter_time_mid=11000 shutter_time_max=11000/' /etc/modprobe.d/tier4-imx490.conf
 
 systemctl disable camera-driver-installer.service
 
