--- a/ansible/roles/tier4_hdr_camera_driver/templates/camera-driver-installer.sh.j2
+++ b/ansible/roles/tier4_hdr_camera_driver/templates/camera-driver-installer.sh.j2
@@ -22,4 +22,6 @@ sed -i 's/options tier4_imx490 trigger_mode=0 enable_auto_exposure=1 enable_dist
 
 systemctl disable camera-driver-installer.service
 
-exit 0
+sync
+
+reboot
